refactor: refactor locale service

--- a/packages/base-ui/src/views/app.module.less
+++ b/packages/base-ui/src/views/app.module.less
@@ -1,6 +1,7 @@
 .app {
     &-layout {
         height: 100%;
+        -webkit-font-smoothing: antialiased;
         background-color: rgb(var(--bg-color));
         display: flex;
         flex-direction: column;
