--- a/packages/base-ui/src/views/components/doc-bars/index.module.less
+++ b/packages/base-ui/src/views/components/doc-bars/index.module.less
@@ -97,6 +97,8 @@
 
             border-radius: var(--border-radius-base);
 
+            border-radius: var(--border-radius-base);
+
             &:hover {
                 background-color: rgb(var(--grey-100));
                 border-radius: var(--border-radius-base);
