feat: modify `width` to `min-width` for toolbar btn

--- a/packages/base-ui/src/views/components/doc-bars/Button/index.module.less
+++ b/packages/base-ui/src/views/components/doc-bars/Button/index.module.less
@@ -7,7 +7,7 @@
     align-items: center;
     justify-content: center;
 
-    width: @toolbar-btn-size;
+    min-width: @toolbar-btn-size;
     height: @toolbar-btn-size;
     padding: 0;
 
